Added Close buttons to table list and main menu. Also testing git hub its working after new rep start.

--- a/SkopesStockCont/MainMenu.xaml
+++ b/SkopesStockCont/MainMenu.xaml
@@ -58,6 +58,7 @@
                     <Button Content="Add Table" Click="Button_Click_1"/>
                 </StackPanel>
             </Viewbox>
+            <Button Content="Close" Width="80" Height="27" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" HorizontalAlignment="Right" Click="Button_Click_2" VerticalContentAlignment="Center"/>
         </StackPanel>
     </Grid>
 </Window>
